--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
   },
   "dependencies": {
     "eventemitter3": "^4.0.7",
+    "marked": "^1.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "vue": "^2.6.12",
     "vue-hot-reload-api": "^2.3.4"
   },
   "devDependencies": {
+    "@types/marked": "^1.1.0",
     "@types/node": "^14.14.2",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
     "@vue/component-compiler-utils": "^3.2.0",
     "parcel-bundler": "^1.12.4",
     "typescript": "^4.0.3",
